# Production-RAG-Plateform

./: .gitignore  README.md  main.py  output_log.txt  pyproject.toml  rag.db  requirements.txt  upload_document.py
src/dashboard/: streamlit_app.py
src/database/: sqlite_manager.py
src/evaluation/: llm_judge.py  ragas_evaluator.py
src/generation/: answer_generator.py  citation_service.py  confidence_service.py  prompt_builder.py
src/ingestion/: chunking_service.py  document_ingestion_pipeline.py  document_loader.py  embedding_service.py
src/pipeline/: rag_pipeline.py
src/query_processing/: multi_query_generator.py  query_rewriter.py
src/retrieval/: bm25_retriever.py  chunk_mapper.py  context_compressor.py  hybrid_retriever.py  multi_query_retriever.py  reranker.py  retriever.py  vector_retriever.py
